# pyquizzer

./: .python-version  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
src/pyquizzer/: __init__.py
