[tool.poetry]
name = "pyquizzer"
version = "0.0.0"
description = "Dynamic questions with automatic correction."
authors = ["BjornFJohansson <bjornjobb@gmail.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fuzzywuzzy = ">=0.18.0"
python-dateutil = ">=2.8.2"
Pillow = ">=9.4.0"
gspread = ">=5.7.2"
pydrive2 = ">=1.19"
pandas = ">=1.5.3"
biopython = ">=1.81"
tqdm = ">=4.64.1"
joblib = "^1.4.2"
platformdirs = "^4.3.6"
pydna = "^5.5.11"

[tool.poetry.urls]
changelog = "https://github.com/BjornFJohansson/pyquizzer/blob/main/changelog.md"
documentation = "https://readthedocs.org/2"
bugtracker = "https://github.com/BjornFJohansson/pyquizzer/issues"
coverage = "https://about.codecov.io/"
youtube = "https://youtu.be/C0DPdy98e4c"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-cli = 'pyquizzer.main'
